# retrieve

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-rust.yml
examples/: from_csv.rs
pfbcore/: Cargo.toml  README.md
pfbcore/src/: lib.rs  scorecard.rs
retrieve/: CHANGELOG.md  Cargo.toml  README.md
retrieve/examples/: from_csv.rs  to_csv.rs
retrieve/src/: cli.rs  lib.rs  main.rs
src/: cli.rs  lib.rs  main.rs
