[package]
name = "retrieve"
version = "0.1.0"
edition = "2021"
description = "Easily retrieve PFB datasets"
homepage = "https://github.com/PeopleForBikes/retrieve"
keywords = ["https", "cli", "download"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PeopleForBikes/retrieve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
color-eyre = "0.6"
csv = "1.1.6"
downloader = { version = "0.2.6", features = ["tui"]}
openssl = { version = '0.10', features = ["vendored"] }
serde = { version="1.0.130", features = ["derive"]}
url = "2.0" 

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]