[package]
name = "retrieve"
version = "0.1.0"
edition = "2021"
description = "Easily retrieve PFB datasets"
homepage = "https://github.com/PeopleForBikes/retrieve"
keywords = ["https", "cli", "download"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PeopleForBikes/retrieve"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
color-eyre = "0.6"
csv = "1.1.6"
downloader = { version = "0.2.6", features = ["tui"]}
openssl = { version = '0.10', features = ["vendored"] }
pfbcore = { path = "../pfbcore" }
serde = { version="1.0.135", features = ["derive"]}
url = "2.0"
